k8s/minio/wasigo-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasigo-minio
  namespace: traefik
  labels:
    app: wasigo-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasigo-minio
  template:
    metadata:
      labels:
        app: wasigo-minio
    spec:
      containers:
        - name: minio
          image: docker.io/minio/minio:RELEASE.2024-01-18T22-51-28Z
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          
          volumeMounts:
            - name: storage
              mountPath: /data
      
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: wasigo-minio-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: wasigo-minio
  namespace: traefik
spec:
  selector:
    app: wasigo-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
