k8s/minio/wasigo-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasigo-minio-ingress
  namespace: traefik
  annotations:
    # Certificado temporal (staging) hasta que pasemos a producción
    traefik.ingress.kubernetes.io/router.middlewares: traefik-wasigo-security-hardening@kubernetescrd,traefik-compress@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Esto es importante para que el backend pueda subir archivos pesados
spec:
  tls:
  - hosts:
    - s3.wasigo.137.131.164.217.nip.io
    secretName: wasigo-minio-tls
  rules:
  - host: s3.wasigo.137.131.164.217.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wasigo-minio # Confirmado por tu kubectl get svc
            port:
              number: 9000 # Puerto real donde escucha MinIO dentro del clúster
